<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-92dp"
        tools:layout_editor_absoluteY="82dp">


        <EditText
            android:id="@+id/cajaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies_label" />

        <CheckBox
            android:id="@+id/deporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_sports" />

        <CheckBox
            android:id="@+id/cajaLectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_reading" />

        <CheckBox
            android:id="@+id/cajaPeliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_movies" />

        <CheckBox
            android:id="@+id/cajaOtros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_others" />


        <EditText
            android:id="@+id/escrbirhobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_others"
            android:inputType="text"
            android:visibility="gone" />

        <!-- Botones -->


        <Button
            android:id="@+id/botonEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit" />

        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/button_clear" />

        <TextView
            android:id="@+id/textoResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text=""
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>